--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -27,9 +27,11 @@ jobs:
           node-version: '20'
 
       - name: Install dependencies
+        working-directory: ./linkto
         run: npm ci
 
       - name: Build and export
+        working-directory: ./linkto
         run: |
           npm run build
           npm run export
@@ -37,7 +39,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: out
+          path: linkto/out
 
   deploy:
     needs: build
